--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,39 +1,51 @@
 .SearchContainer {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
 }
 
 .SearchBar {
-    display: flex;
-    padding: 0.5rem;
-    width: 40%;
-    background-color: rgb(178, 223, 219);
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  padding: 0.5rem;
+  width: 40%;
+  background-color: rgb(178, 223, 219);
+  align-items: center;
+  justify-content: center;
 }
 
 input#country-input {
-    flex: 1;
-    font-size: 1rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 0.5rem;
-    border: none;    
+  flex: 1;
+  font-size: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
+  border: none;
+  outline: none;
 }
 
 input#submit-button {
-    width: auto;
-    font-size: 1rem;
-    text-align: center;
-    margin-left: 0.5rem;
-    border: none;    
-    background-color: rgb(0, 150, 136);
-    color: whitesmoke;
-    font-weight: 600;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+  width: auto;
+  font-size: 1rem;
+  text-align: center;
+  margin-left: 0.5rem;
+  border: none;
+  background-color: rgb(0, 150, 136);
+  color: whitesmoke;
+  font-weight: 600;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  outline: none;
+}
+
+input#submit-button:hover {
+  background-color: #004d40;
+  transition: 0.7s;
+}
+
+input#submit-button:active {
+  background-color: #004d40;
+  transition: 0.7s;
 }
